Removed changeLocation file, added logic to prevent startingLocation from displaying too long

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -11,13 +11,12 @@
    }
 
   // Main content styling
-  .content {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    // margin-top: 10rem;
-    // padding: 5rem;
-  }
+  // .content {
+  //   height: 100%; 
+  //   display: flex;
+  //   flex-direction: column;
+  //   justify-content: space-between;
+  // }
 
   .content h1 {
     margin-top: 1.75rem;
@@ -32,22 +31,13 @@
   //     flex-direction: column;
   //     width: max-content;
   //   }
-
-  //   // .divider {
-  //   //   height: 1px;
-  //   //   width: 100%;
-  //   //   background: var(--red-to-pink-to-purple-horizontal-gradient);
-  //   //   margin-block: 1.5rem;
-  //   // }
   // }
 
   .container {
     display:flex;
-    // justify-content: space-between;
     align-items: stretch;
     gap: 2rem;
     padding: 1rem;
-    // height: 100%;
   }
 
   .left-align{
@@ -62,7 +52,6 @@
     background-color: #f0f0f0;
     border: 1px solid #ccc;
     border-radius: 5px;
-    // padding: 1rem;
   }
   
   .user-info-component, .running-stats-component {
@@ -72,15 +61,37 @@
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   }
 
+  .running-stats-component {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .hover:hover {
+    cursor: pointer;
+    color: blue;
+    // transform: scale(1.1); /* Slightly increase size on hover */
+  }
+
   .goals-component {
     flex-grow: 1;
     margin: 0;
   }
 
+  .add-goal-container {
+    display: flex;
+    flex-direction: column;
+    // width: 100%; /* Limit width */
+    max-width: 35rem; /* Set a maximum width for the left-aligned divs */
+  }
 
   .location-cards {
-    max-height: 800px;
-    overflow-x: auto;
+    max-height: 10rem;
+    overflow-y: auto;
+    width: 100%;
+  }
+
+  .location-cards div {
+    width: 100%; /* Ensure the location cards do not expand the container */
   }
 
   app-address-card {
